--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ body {
     margin-bottom: 20px;
 }
 
+.buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 button {
     background-color: #fff;
     color: #000;
@@ -41,8 +47,3 @@ button:disabled {
     cursor: not-allowed;
 }
 
-
-button:disabled {
-    background-color: #666;
-    cursor: not-allowed;
-}
